# prysm

./: .gitignore  WORKSPACE  deps.bzl  go.mod  go.sum
beacon-chain/blockchain/: BUILD.bazel  process_attestation_test.go  process_block.go  receive_attestation_test.go  receive_block.go  service.go
beacon-chain/cache/: skip_slot_cache.go
beacon-chain/cache/depositcache/: deposits_cache_test.go
beacon-chain/core/altair/: BUILD.bazel  block.go  epoch_precompute.go  epoch_precompute_test.go  epoch_spec.go  epoch_spec_test.go
beacon-chain/core/blocks/: deposit.go  genesis.go
beacon-chain/core/epoch/: epoch_processing.go  epoch_processing_test.go
beacon-chain/core/helpers/: BUILD.bazel  app_payload.go  committee.go  committee_test.go  rewards_penalties.go  rewards_penalties_test.go  slot_epoch.go  validators.go  validators_test.go
beacon-chain/core/interface/: interface.go
beacon-chain/core/shard/: BUILD.bazel  committee.go  epoch.go  gas.go  header.go  proposer.go  shard.go  slashing.go  vote.go
beacon-chain/core/state/: BUILD.bazel  altair_transition_no_verify_sig_test.go  state.go  transition.go  transition_no_verify_sig.go
beacon-chain/db/iface/: interface.go
beacon-chain/db/kv/: BUILD.bazel  blocks.go  errors.go  genesis.go  genesis_test.go  migration_state_validators.go  schema.go  state.go  wss.go
beacon-chain/db/slasherkv/: kv.go  slasher.go  slasherkv_test.go
beacon-chain/gateway/: BUILD.bazel  gateway.go  helpers.go  jsonpbhex.go  jsonpbhex_test.go  path.go  pathparser.go
beacon-chain/interop-cold-start/: service.go
beacon-chain/node/: node.go
beacon-chain/p2p/: BUILD.bazel  broadcaster.go  gossip_scoring_params.go
beacon-chain/p2p/peers/: status.go
beacon-chain/powchain/: BUILD.bazel  deposit_trie_recreate_test.go  log_processing.go  log_processing_test.go  service.go
beacon-chain/rpc/: BUILD.bazel  service.go
beacon-chain/rpc/beaconv1/: pool.go  pool_test.go  state.go  validator.go
beacon-chain/rpc/eventsv1/: events.go  server.go
beacon-chain/rpc/node/: server.go
beacon-chain/rpc/node_alpha/: BUILD.bazel
beacon-chain/rpc/node_v1/: BUILD.bazel  server.go  server_test.go
beacon-chain/rpc/validator/: BUILD.bazel  proposer.go  server.go  sync_committee.go
beacon-chain/server/: BUILD.bazel  main.go
beacon-chain/slasher/: detect_attestations.go  detect_attestations_test.go  receive.go  receive_test.go  service.go  service_test.go
beacon-chain/state/fieldtrie/: field_trie_test.go
beacon-chain/state/interface/: phase0.go
beacon-chain/state/state-altair/: BUILD.bazel  doc.go  field_root_participation_bit.go  field_root_sync_committee.go  field_roots.go  field_trie_test.go  getters_test.go  helpers_test.go  references_test.go  state_trie.go  state_trie_test.go  types_test.go
beacon-chain/state/stateV0/: BUILD.bazel  cloners.go  getters_shard.go  getters_state.go  setters_attestation_test.go  setters_shard.go  state_trie.go  types.go
beacon-chain/state/stategen/: BUILD.bazel  getter.go
beacon-chain/state/stateutil/: BUILD.bazel  pending_attestation_root.go  shard_header_root.go
beacon-chain/state/v1/: state_trie.go  types.go
beacon-chain/state/v2/: BUILD.bazel
beacon-chain/sync/: BUILD.bazel  service.go  validate_beacon_attestation.go  validate_beacon_blocks.go
beacon-chain/sync/initial-sync/: blocks_queue.go  round_robin.go
cmd/beacon-chain/: main.go
cmd/beacon-chain/flags/: base.go
endtoend/evaluators/: BUILD.bazel  validator.go
google/api/: BUILD.bazel  http.proto
proto/eth/service/: BUILD.bazel  beacon_chain_service.pb.go  beacon_chain_service.pb.gw.go  beacon_chain_service.proto  beacon_debug_service.pb.go  beacon_debug_service.pb.gw.go  beacon_debug_service.proto  event_service.pb.go  event_service.pb.gw.go  event_service.proto  node_service.pb.go  node_service.pb.gw.go  validator_service.pb.go  validator_service.pb.gw.go  validator_service.proto
proto/eth/v1/: BUILD.bazel  attestation.pb.go  beacon_block.pb.go  beacon_block.proto  beacon_chain.pb.go  beacon_chain.proto  beacon_debug.pb.go  beacon_debug.proto  beacon_state.pb.go  beacon_state.proto  events.pb.go  events.proto  generated.ssz.go  node.pb.go  node.proto  validator.pb.go  validator.proto
proto/eth/v1alpha1/: BUILD.bazel  (+7 more)
proto/gateway/: BUILD.bazel  event_source.proto
proto/interfaces/: metadata.go
proto/migration/: beacon.go  migration.go  node.go  type_migration.go  types.go  types_migration.go
scripts/: catalyst.sh  mirror-ethereumapis.sh
shared/blockutil/: block_utils.go
shared/bytesutil/: BUILD.bazel  bytes.go
shared/clientstats/: scrapers.go  scrapers_test.go  types.go
shared/cmd/: defaults.go
shared/copyutil/: cloners.go
shared/gateway/: api_middleware.go  gateway.go  gateway_test.go
shared/grpcutils/: BUILD.bazel  grpcutils.go
shared/htrutils/: BUILD.bazel  htrutils.go  htrutils_test.go
shared/interfaces/: block_interface.go  phase0_block_wrapper.go
shared/interop/: BUILD.bazel  generate_genesis_state.go
shared/mock/: BUILD.bazel
shared/params/: config.go  loader_test.go  mainnet_config.go
shared/queue/: priority_queue.go
shared/testutil/: BUILD.bazel  block.go
shared/trieutil/: sparse_merkle.go
slasher/: BUILD.bazel  main.go  usage.go
slasher/beaconclient/: BUILD.bazel  receivers_test.go
slasher/db/: BUILD.bazel  alias.go  db.go  db_test.go  restore.go  restore_test.go
slasher/detection/: service.go
slasher/internal/db/iface/: BUILD.bazel  interface.go
slasher/internal/detection/attestations/iface/: BUILD.bazel  iface.go
slasher/node/: BUILD.bazel  node.go
slasher/rpc/: BUILD.bazel  server.go  server_test.go
spectest/mainnet/altair/transition/: BUILD.bazel  core_test.go
tools/catalyst/: BUILD.bazel  README.md  beacon.config.yaml  beacon.config.yaml.tpl  eth1_config.yaml  eth2_config.yaml  main.go  validator.config.yaml  validator.config.yaml.tpl
tools/catalyst/wallet/direct/accounts/: all-accounts.keystore.json
tools/extractor/: BUILD.bazel  main.go
tools/type-migration/: main.go
validator/client/: BUILD.bazel  propose.go  runner.go  service.go  validator.go
(+117 files in other folders)
