load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@prysm//tools/go:def.bzl", "go_library")

proto_library(
    name = "gateway_proto",
    srcs = ["event_source.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:any_proto"],
)

go_proto_library(
    name = "gateway_go_proto",
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/proto/gateway",
    proto = ":gateway_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":gateway_go_proto"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/proto/gateway",
    visibility = ["//visibility:public"],
)
