load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    data = glob(["*.yaml"]),
    importpath = "github.com/prysmaticlabs/prysm/tools/catalyst",
    visibility = ["//visibility:private"],
    deps = [
        "//beacon-chain/core/state:go_default_library",
        "//proto/beacon/p2p/v1:go_default_library",
        "//shared/fileutil:go_default_library",
        "//shared/params:go_default_library",
        "//validator/keymanager/derived:go_default_library",
        "//validator/keymanager/imported:go_default_library",
        "@com_github_ethereum_go_ethereum//core:go_default_library",
        "@com_github_ethereum_go_ethereum//core/rawdb:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_minio_sha256_simd//:go_default_library",
        "@com_github_prysmaticlabs_ethereumapis//eth/v1alpha1:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_tyler_smith_go_bip39//:go_default_library",
        "@com_github_wealdtech_go_eth2_types_v2//:go_default_library",
        "@com_github_wealdtech_go_eth2_util//:go_default_library",
        "@com_github_wealdtech_go_eth2_wallet_encryptor_keystorev4//:go_default_library",
    ],
)

go_binary(
    name = "catalyst",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
