load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["interface.go"],
    importpath = "github.com/prysmaticlabs/prysm/slasher/internal/db/iface",
    visibility = ["//slasher/db:__subpackages__"],
    deps = [
        "//proto/slashing:go_default_library",
        "//shared/backuputil:go_default_library",
        "//slasher/internal/db/types:go_default_library",
        "//slasher/internal/detection/attestations/types:go_default_library",
        "@com_github_prysmaticlabs_ethereumapis//eth/v1alpha1:go_default_library",
    ],
)
