load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["core_test.go"],
    data = glob(["*.yaml"]) + [
        "@eth2_spec_tests_mainnet//:test_data",
    ],
    tags = ["spectest"],
    deps = ["//spectest/shared/altair/transition:go_default_library"],
)
