load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["iface.go"],
    importpath = "github.com/prysmaticlabs/prysm/slasher/internal/detection/attestations/iface",
    visibility = ["//visibility:public"],
    deps = [
        "//slasher/internal/detection/attestations/types:go_default_library",
        "@com_github_prysmaticlabs_ethereumapis//eth/v1alpha1:go_default_library",
    ],
)
